Fix twitter links in nav and mobile word wrap

--- a/scss/_inner.scss
+++ b/scss/_inner.scss
@@ -16,6 +16,7 @@ body {
 				font-size: 56px;
 				line-height: 72px;
 				padding-bottom: 8px;
+				word-wrap: break-word;
 			}
 
 			.sec-title {
